--- a/index.html
+++ b/index.html
@@ -165,8 +165,8 @@
   <body>
     <div class="nav-color">
       <nav class="container navbar navbar-expand-md navbar-dark">
-        <a class="navbar-brand logoname" href="https://risingpoll.com/"
-          >RisingPoll</a
+        <a class="navbar-brand logoname" href="https://scontent.fdel3-4.fna.fbcdn.net/v/t39.30808-1/305979099_109335488584311_1880458501109128011_n.jpg?stp=dst-jpg_p200x200&_nc_cat=104&ccb=1-7&_nc_sid=c6021c&_nc_ohc=lVUPSvT7lHMAX9Kr9jA&_nc_ht=scontent.fdel3-4.fna&oh=00_AfDUtjE9MRBwsN1p31Azzde7ioRScl-8BbG6Ca95AhKWfQ&oe=64D20F1F"
+          >RASTRIYA SANGAM</a
         >
         <button
           class="navbar-toggler"
@@ -594,7 +594,7 @@
             <div class="col-md-6">
               <img
                 class="roundedlogo"
-                src="https://risingpoll.com/assets/rising.png?v=1"
+                src="https://scontent.fdel3-4.fna.fbcdn.net/v/t39.30808-1/305979099_109335488584311_1880458501109128011_n.jpg?stp=dst-jpg_p200x200&_nc_cat=104&ccb=1-7&_nc_sid=c6021c&_nc_ohc=lVUPSvT7lHMAX9Kr9jA&_nc_ht=scontent.fdel3-4.fna&oh=00_AfDUtjE9MRBwsN1p31Azzde7ioRScl-8BbG6Ca95AhKWfQ&oe=64D20F1F"
                 alt=""
               />
             </div>
