--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
   <body>
     <div class="nav-color">
       <nav class="container navbar navbar-expand-md navbar-dark">
-        <a class="navbar-brand logoname" href="https://scontent.fdel3-4.fna.fbcdn.net/v/t39.30808-1/305979099_109335488584311_1880458501109128011_n.jpg?stp=dst-jpg_p200x200&_nc_cat=104&ccb=1-7&_nc_sid=c6021c&_nc_ohc=lVUPSvT7lHMAX9Kr9jA&_nc_ht=scontent.fdel3-4.fna&oh=00_AfDUtjE9MRBwsN1p31Azzde7ioRScl-8BbG6Ca95AhKWfQ&oe=64D20F1F"
+        <a class="navbar-brand logoname" href="./assets/logo.jpg"
           >RASTRIYA SANGAM</a
         >
         <button
@@ -179,22 +179,22 @@
         <div class="collapse navbar-collapse mx-5" id="collapsibleNavbar">
           <ul class="navbar-nav">
             <li class="nav-item mx-2">
-              <a class="nav-link navi" href="https://risingpoll.com/create"
+              <a class="nav-link navi" href=""
                 >Create Poll</a
               >
             </li>
             <li class="nav-item mx-2">
-              <a class="nav-link navi" href="https://risingpoll.com/blog"
+              <a class="nav-link navi" href=""
                 >Blog</a
               >
             </li>
             <li class="nav-item hide-d">
-              <a class="nav-link navi" href="https://risingpoll.com/login"
+              <a class="nav-link navi" href=""
                 >Login</a
               >
             </li>
             <li class="nav-item hide-d">
-              <a class="nav-link navi" href="https://risingpoll.com/signup"
+              <a class="nav-link navi" href=""
                 >Sign Up</a
               >
             </li>
@@ -203,14 +203,14 @@
             <li class="nav-item mx-2">
               <a
                 class="nav-link navi bg-special px-3"
-                href="https://risingpoll.com/login"
+                href=""
                 >Login</a
               >
             </li>
             <li class="nav-item mx-2">
               <a
                 class="nav-link navi bg-special px-3"
-                href="https://risingpoll.com/signup"
+                href=""
                 >Sign up</a
               >
             </li>
@@ -359,12 +359,13 @@
     <div class="container pt-4 pb-1">
       <div class="mid-first-share my-4">
         <div class="text-center px-2 py-3">
-          <span class="head-share">लोरमी विधानसभा कांग्रेस से टिकट किसको?</span>
+          <span class="head-share">जनता किसे चुनना चाहती हैं लोरमी विधानसभा का अगला विधायक?</span>
         </div>
         <div id="msg" class="text-center"></div>
         <div class="opt">
           <div class="options text-left px-5">
-            <label class="radio-text">
+              <label class="radio-text">
+                <img style="width: 20%;height: 10%;border-radius:50%;" src="./assets/lekhni.jpg" alt=""/>
               <input
                 class="radio"
                 type="radio"
@@ -374,6 +375,7 @@
               <span>श्रीमती लेखनी सोनू चंद्राकर</span>
             </label>
             <label class="radio-text">
+                <img style="width: 20%;height: 10%;border-radius:50%;" src="./assets/khusbu.jpg" alt="">
               <input
                 class="radio"
                 type="radio"
@@ -383,15 +385,17 @@
               <span>श्रीमती खुशबू वैष्णव</span>
             </label>
             <label class="radio-text">
-              <input
+                <img style="width: 20%;height: 10%;border-radius:50%;" src="./assets/saaho.jpg" alt="">
+                <input
                 class="radio"
                 type="radio"
                 name="option"
                 value="option_2"
-              />
-              <span>थानेश्वर साहू</span>
+                />
+                <span>थानेश्वर साहू</span>
             </label>
             <label class="radio-text">
+                <img style="width: 20%;height: 10%;border-radius:50%;" src="./assets/sagar.jpg" alt="">
               <input
                 class="radio"
                 type="radio"
@@ -399,6 +403,16 @@
                 value="option_3"
               />
               <span>सागर सिंह बैस</span>
+            </label>
+            <label class="radio-text">
+                <img src="./assets/dharamjeet.jpg" style="width: 20%;height: 10%;border-radius:50%;" alt="">
+              <input
+                class="radio"
+                type="radio"
+                name="option"
+                value="option_3"
+              />
+              <span>धरमजीत सिंह</span>
             </label>
           </div>
           <div class="vote-button py-2">
@@ -491,7 +505,7 @@
         </div>
       </div>
     </div>
-    <script>
+    <!-- <script>
       function my() {
         var Text = document.getElementById("foo");
         Text.select();
@@ -504,7 +518,7 @@
           navigator
             .share({
               title: "लोरमी विधानसभा कांग्रेस से टिकट किसको?",
-              text: "लोरमी विधानसभा कांग्रेस से टिकट किसको?  https://risingpoll.com/poll/1164c530922f8dd",
+              text: "लोरमी विधानसभा कांग्रेस से टिकट किसको?",
             })
             .then(() => console.log("Successful share"))
             .catch((error) => console.log("Error sharing", error));
@@ -515,7 +529,7 @@
         }
       });
     </script>
-    <script src="https://risingpoll.com/assets/js/report.js?v=1574308462"></script>
+    <script src="https://risingpoll.com/assets/js/report.js?v=1574308462"></script> -->
 
     <style>
       /* .futter{
@@ -529,30 +543,30 @@
         <section class="mb-4 socialicon">
           <a
             class="btn boostrapfacebook btn-outline-light btn-floating m-1"
-            href="https://www.facebook.com/profile.php?id=100090620859878&amp;mibextid=ZbWKwL"
+            href="https://www.facebook.com/profile.php?id=100085235813863&mibextid=ZbWKwL"
             role="button"
             ><i class="fab fa-facebook-f"></i
           ></a>
 
-          <a
+          <!-- <a
             class="btn btn-outline-light btn-floating m-1"
-            href="https://twitter.com/RisingPoll"
+            href=""
             role="button"
             ><i class="fab fa-twitter"></i
-          ></a>
+          ></a> -->
 
-          <a
+          <!-- <a
             class="btn btn-outline-light btn-floating m-1"
-            href="https://instagram.com/risingpoll?igshid=ZDdkNTZiNTM="
+            href=""
             role="button"
             ><i class="fab fa-instagram"></i
-          ></a>
+          ></a> -->
         </section>
 
         <section class="">
           <form
             method="post"
-            action="https://risingpoll.com/manage/email_newsletter"
+            action=""
           >
             <div class="row d-flex justify-content-center">
               <div class="col-auto">
@@ -583,9 +597,7 @@
 
         <section class="mb-4">
           <p class="margin0">
-            Gather opinions and insights with Rising Poll - the user-friendly
-            platform for creating and participating in engaging polls. Join us
-            today to start polling!
+            Connect with a global community to collect thoughts and viewpoints with Rastriya Samgam - a platform designed with user ease and engagement at its core. Begin your polling journey with us today!
           </p>
         </section>
 
@@ -593,6 +605,7 @@
           <div class="row">
             <div class="col-md-6">
               <img
+            style="border-radius: 50%;"
                 class="roundedlogo"
                 src="https://scontent.fdel3-4.fna.fbcdn.net/v/t39.30808-1/305979099_109335488584311_1880458501109128011_n.jpg?stp=dst-jpg_p200x200&_nc_cat=104&ccb=1-7&_nc_sid=c6021c&_nc_ohc=lVUPSvT7lHMAX9Kr9jA&_nc_ht=scontent.fdel3-4.fna&oh=00_AfDUtjE9MRBwsN1p31Azzde7ioRScl-8BbG6Ca95AhKWfQ&oe=64D20F1F"
                 alt=""
@@ -602,24 +615,24 @@
             <div class="col-md-6">
               <ul class="list-unstyled futternavi mb-0 d-inline text-left">
                 <li>
-                  <a href="https://risingpoll.com/privacy" class="text-white"
+                  <a href="" class="text-white"
                     >Privacy Policy</a
                   >
                 </li>
                 <li>
                   <a
-                    href="https://risingpoll.com/terms_condion"
+                    href=""
                     class="text-white"
                     >Terms &amp; condition</a
                   >
                 </li>
                 <li>
-                  <a href="https://risingpoll.com/disclaimer" class="text-white"
+                  <a href="" class="text-white"
                     >Disclaimer</a
                   >
                 </li>
                 <li>
-                  <a href="https://risingpoll.com/contact_us" class="text-white"
+                  <a href="" class="text-white"
                     >Contact Us</a
                   >
                 </li>
@@ -630,13 +643,13 @@
       </div>
 
       <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
-        <a class="text-white" href="https://risingpoll.com/"
-          >© 2023 Risingpoll. All rights reserved.</a
+        <a class="text-white" href=""
+          >© 2023 Rastriya Sangam. All rights reserved.</a
         >
       </div>
     </footer>
 
-    <script>
+    <!-- <script>
       var i = 2;
       function create_element() {
         $("#app_thing")
@@ -721,6 +734,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.14.6/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.14.6/firebase-messaging.js"></script>
-    <script src="https://risingpoll.com/integrate.js?v=551233345"></script>
+    <script src="https://risingpoll.com/integrate.js?v=551233345"></script> -->
   </body>
 </html>
